// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<styled.div>
  <InputFieldLabel
    htmlFor="InputTestId"
  >
    Name your version
  </InputFieldLabel>
  <styled.input
    disabled={false}
    id="InputTestId"
    onBlur={[Function]}
    onChange={[Function]}
    readonly={false}
    required={false}
    status={2}
    warning={false}
  />
</styled.div>
`;

exports[`renders a valid state 1`] = `
<styled.div>
  <InputFieldLabel
    htmlFor="InputTestId"
  >
    Name your version
  </InputFieldLabel>
  <styled.input
    defaultValue="abc"
    disabled={false}
    id="InputTestId"
    onBlur={[Function]}
    onChange={[Function]}
    pattern="abc"
    readonly={false}
    required={false}
    status={1}
    warning={false}
  />
</styled.div>
`;

exports[`renders an invalid state 1`] = `
<styled.div>
  <InputFieldLabel
    htmlFor="InputTestId"
  >
    Name your version
  </InputFieldLabel>
  <styled.input
    defaultValue="adlkfj"
    disabled={false}
    id="InputTestId"
    onBlur={[Function]}
    onChange={[Function]}
    pattern="abc"
    readonly={false}
    required={false}
    status={0}
    warning={false}
  />
</styled.div>
`;
